hphp/hack/test/typecheck/await_in_coroutine1.php.exp
File "await_in_coroutine1.php", line 3, characters 20-20:
Internal error: unsupported:coroutines (Other[0000])
