hphp/hack/test/typecheck/await_in_coroutine1.php
<?hh // strict

coroutine function f(Awaitable<string> $x): void {
  $s = await $x;
}
